# fCryptoLib

./: AES128_test.cpp  LICENSE  README.md  aes128_test.py  aes_benchmark.cpp  fcryptolib.hpp
python/: aes.py  pyproject.toml  python_bind.cpp  setup.py
python/src/fcryptolib_fador/: python_bind.cpp
python/tests/: simple_test.py
